section about start

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,6 +11,7 @@
     //= components/_header.html
     <main class="main">
       //= components/_section-home.html
+      //= components/_section-about.html
 
     </main>
     //= components/_footer.html
