form button arrow

--- a/src/index.html
+++ b/src/index.html
@@ -137,12 +137,22 @@
             <div class="contact-content">
               <div class="section-title">
                 <h3 class="title-3">
-                  Sey hello
+                  Say hello
                 </h3>
               </div>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi nulla dolore, eaque provident eius maxime
                 incidunt, obcaecati atque itaque, reiciendis temporibus esse corrupti molestiae asperiores explicabo soluta
                 ad? Corrupti, dolores?</p>
+              <ul class="contct-list">
+                <li class="contact-list__item">
+                  <p class="contact-list__heading">Phone:</p>
+                  <a href="" class="contact-list__link" target="_blank">+3(8067)587-98-98</a>
+                </li>
+                <li class="contact-list__item">
+                  <p class="contact-list__heading">E-mail:</p>
+                  <a href="" class="contact-list__link" target="_blank">andrewkhimich@gmail.com</a>
+                </li>
+              </ul>
             </div>
             <div class="contact-form">
               <form class="form">
@@ -154,17 +164,23 @@
                 <div class="form-content">
                   <label class="input-container">
                     <input type="text" class="input-item" required="">
-                    <span class="input-label">Your Name</span>
+                    <span class="input-label">Name</span>
                   </label>
                   <label class="input-container">
                     <input type="text" class="input-item" required="">
-                    <span class="input-label">Your Email</span>
+                    <span class="input-label">Email</span>
                   </label>
                   <label class="input-container">
                     <textarea class="input-item" required=""></textarea>
-                    <span class="input-label">Your Message</span>
+                    <span class="input-label">Message</span>
                   </label>
-                  <button class="button button_primary">Send Message</button>
+                  <button class="button button_primary">
+                    <span>Say hello...</span>
+                    <svg class="svg-icon">
+                      <use xlink:href="img/svg/sprite-svg/sprite.svg#arrow-right">
+                      </use>
+                    </svg>
+                  </button>
                 </div>
               </form>
             </div>
