--- a/src/index.html
+++ b/src/index.html
@@ -126,9 +126,70 @@
             <div class="about-img">
               <img src="img/jpg/andrew.jpg" alt="Andrew">
             </div>
-      
           </div>
-      
+        </div>
+      </section>
+      <section class="section section-portfolio">
+        <div class="word">
+          <p>Portfolio</p>
+        </div>
+        <div class="abstract-lines">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="section-title">
+          <h2 class="title-2">
+            Portfolio
+          </h2>
+        </div>
+        <div class="container_lg">
+          <div class="portfolio-row">
+            <div class="portfolio">
+              <div class="portfolio-card">
+                <div class="portfolio-card__img">
+                  <img src="img/jpg/1.jpg" alt="1">
+                </div>
+                <div class="portfolio-card__content">
+                  <a href="#" class="button button_sm" target="_blank">See More</a>
+                </div>
+              </div>
+              <div class="portfolio-card">
+                <div class="portfolio-card__img">
+                  <img src="img/jpg/2.jpg" alt="1">
+                </div>
+                <div class="portfolio-card__content">
+                  <a href="#" class="button button_sm" target="_blank">See More</a>
+                </div>
+              </div>
+              <div class="portfolio-card">
+                <div class="portfolio-card__img">
+                  <img src="img/jpg/3.jpg" alt="1">
+                </div>
+                <div class="portfolio-card__content">
+                  <a href="#" class="button button_sm" target="_blank">See More</a>
+                </div>
+              </div>
+              <div class="portfolio-card">
+                <div class="portfolio-card__img">
+                  <img src="img/jpg/4.jpg" alt="1">
+                </div>
+                <div class="portfolio-card__content">
+                  <a href="#" class="button button_sm" target="_blank">See More</a>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
       <section class="section section-contact">
@@ -146,11 +207,11 @@
               <ul class="contct-list">
                 <li class="contact-list__item">
                   <p class="contact-list__heading">Phone:</p>
-                  <a href="" class="contact-list__link" target="_blank">+3(8067)587-98-98</a>
+                  <a href="tel:+380675879898" class="contact-list__link" target="_blank">+3(8067)587-98-98</a>
                 </li>
                 <li class="contact-list__item">
                   <p class="contact-list__heading">E-mail:</p>
-                  <a href="" class="contact-list__link" target="_blank">andrewkhimich@gmail.com</a>
+                  <a href="mailto:" class="contact-list__link" target="_blank">andrewkhimich@gmail.com</a>
                 </li>
               </ul>
             </div>
