--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,6 +12,7 @@
     <main class="main">
       //= components/_section-home.html
       //= components/_section-about.html
+      //= components/_section-portfolio.html
       //= components/_section-contact.html
     </main>
     //= components/_footer.html
