--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 <body>
   <div class="main-wrapper">
     <!-- header start -->
-    <header class="header">
+    <!-- <header class="header">
       <div class="container_lg">
         <div class="header-row">
           <a href="./index.html" class="logo">
@@ -29,7 +29,7 @@
             <span class="humburger-item"></span>
           </button>
         </div>
-      </div>
+      </div> -->
     </header>
     <!-- header end -->
     <main class="main">
@@ -51,11 +51,13 @@
               <span></span>
               <span></span>
             </div>
-            <h1 class="title-1">
-              Andrew <br>
-              Khimich
-            </h1>
-            <p class="sub-title"> <span>#</span> Front end developer <span>#</span> freelancer</p>
+            <div class="home-title__text">
+              <h1 class="title-1">
+                Andrew <br>
+                Khimich
+              </h1>
+              <p class="sub-title"> <span>#</span> Front end developer <span>#</span> freelancer</p>
+            </div>
           </div>
           <ul class="social-list">
             <li class="social-item"><a href="#" class="social-link">
