--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>My | Home</title>
+  <title>Andrew | Khimich</title>
   //= links/_head.html
 </head>
 
@@ -10,13 +10,243 @@
   <div class="main-wrapper">
     //= components/_header.html
     <main class="main">
-      //= components/_section-home.html
-      //= components/_section-about.html
-      //= components/_section-portfolio.html
-      //= components/_section-contact.html
+      <section class="section section-home">
+        <div class="container_lg">
+          <div class="home-title">
+            <div class="abstract-lines">
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
+            <div class="home-title__text">
+              <h1 class="title-1">
+                Andrew <br>
+                Khimich
+              </h1>
+              <p class="sub-title"> <span>#</span> Front end developer <span>#</span> freelancer</p>
+            </div>
+          </div>
+          <ul class="social-list">
+            <li class="social-item"><a href="#" class="social-link">
+                <svg class="svg-icon">
+                  <use xlink:href="img/svg/sprite-svg/sprite.svg#git">
+                  </use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item"><a href="#" class="social-link">
+                <svg class="svg-icon">
+                  <use xlink:href="img/svg/sprite-svg/sprite.svg#youtube">
+                  </use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item"><a href="#" class="social-link">
+                <svg class="svg-icon">
+                  <use xlink:href="img/svg/sprite-svg/sprite.svg#instagram">
+                  </use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+          <button class="scroll-btn">
+            <span class="button-text">
+              scroll
+            </span>
+          </button>
+        </div>
+      </section>
+      <section class="section section-about">
+        <div class="word">
+          <p>About</p>
+        </div>
+        <div class="abstract-lines">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="container_lg">
+
+          <div class="about-row">
+            <div class="about-content">
+              <div class="section-title">
+                <h2 class="title-2">
+                  About
+                </h2>
+              </div>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur velit at minima earum quod animi qui
+                commodi, officia quia non dolores est placeat sint saepe possimus laudantium nemo magnam! In nulla
+                officia a
+                repellat voluptatem. Qui consectetur alias iste illum, quaerat a, ipsam deserunt dignissimos non maxime
+                provident molestias temporibus sunt nisi totam, at laboriosam assumenda ut similique? Hic saepe et ipsa
+                maxime
+                tempora itaque in nihil molestiae repellat harum sequi aliquam, dolorem dignissimos minus voluptatem,
+                eum ea,
+                officiis necessitatibus. Ab, dolorum odio? Soluta tempore iusto, deleniti qui ut eos exercitationem.
+                Consequatur nihil totam saepe debitis qui, quia ab dicta.</p>
+            </div>
+            <div class="about-img">
+              <picture>
+                <source srcset="img/andrew.webp" type="image/webp">
+                <img src="img/andrew.jpg" alt="Andrew" />
+              </picture>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section section-portfolio">
+        <div class="word">
+          <p>Portfolio</p>
+        </div>
+        <div class="abstract-lines">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="section-title">
+          <h2 class="title-2">
+            Portfolio
+          </h2>
+        </div>
+        <div class="container_lg">
+          <div class="portfolio-row">
+            <div class="portfolio">
+              <div class="portfolio-card">
+                <div class="portfolio-card__img">
+                  <picture>
+                    <source srcset="img/1.webp" type="image/webp">
+                    <img src="img/1.jpg" alt="1" />
+                  </picture>
+                </div>
+                <div class="portfolio-card__content">
+                  <a href="#" class="button button_sm" target="_blank">See More</a>
+                </div>
+              </div>
+              <div class="portfolio-card">
+                <div class="portfolio-card__img">
+                  <picture>
+                    <source srcset="img/2.webp" type="image/webp">
+                    <img src="img/2.jpg" alt="2" />
+                  </picture>
+                </div>
+                <div class="portfolio-card__content">
+                  <a href="#" class="button button_sm" target="_blank">See More</a>
+                </div>
+              </div>
+              <div class="portfolio-card">
+                <div class="portfolio-card__img">
+                  <picture>
+                    <source srcset="img/3.webp" type="image/webp">
+                    <img src="img/3.jpg" alt="3" />
+                  </picture>
+                </div>
+                <div class="portfolio-card__content">
+                  <a href="#" class="button button_sm" target="_blank">See More</a>
+                </div>
+              </div>
+              <div class="portfolio-card">
+                <div class="portfolio-card__img">
+                  <picture>
+                    <source srcset="img/4.webp" type="image/webp">
+                    <img src="img/4.jpg" alt="4" />
+                  </picture>
+                </div>
+                <div class="portfolio-card__content">
+                  <a href="#" class="button button_sm" target="_blank">See More</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section section-contact">
+        <div class="container_lg">
+          <div class="contact-row">
+            <div class="contact-content">
+              <div class="section-title">
+                <h3 class="title-3">
+                  Say hello
+                </h3>
+              </div>
+              <p>If you want to hire me, or just say a few nice words, please let me know. I would really appreciate it.</p>
+              <ul class="contct-list">
+                <li class="contact-list__item">
+                  <p class="contact-list__heading">Phone:</p>
+                  <a href="tel:+380675879898" class="contact-list__link" target="_blank">+3(8067)587-98-98</a>
+                </li>
+                <li class="contact-list__item">
+                  <p class="contact-list__heading">E-mail:</p>
+                  <a href="mailto:andrijkhimich@gmail.com" class="contact-list__link"
+                    target="_blank">andrijkhimich@gmail.com</a>
+                </li>
+              </ul>
+            </div>
+            <div class="contact-form">
+              <form class="form" action="mail.php" method="POST" onsubmit="return submitForm();">
+                <div class="section-title">
+                  <h3 class="title-3">
+                    Contact form
+                  </h3>
+                </div>
+                <div class="form-content">
+                  <label class="input-container">
+                    <input type="text" name="name" class="input-item" required>
+                    <span class="input-label">Name</span>
+                  </label>
+                  <label class="input-container">
+                    <input type="text" name="email" class="input-item" required>
+                    <span class="input-label">Email</span>
+                  </label>
+                  <label class="input-container">
+                    <textarea class="input-item" name="message" required></textarea>
+                    <span class="input-label">Message</span>
+                  </label>
+                  <button class="button button_primary" type="submit">
+                    <span>Say hello...</span>
+                    <svg class="svg-icon">
+                      <use xlink:href="img/svg/sprite-svg/sprite.svg#arrow-right">
+                      </use>
+                    </svg>
+                  </button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
-    //= components/_footer.html
-    //= components/_modal.html
+    <!-- //= components/_footer.html -->
+    <!-- //= components/_modal.html -->
     //= links/_scripts.html
   </div>
 
