--- a/src/html/links/_head.html
+++ b/src/html/links/_head.html
@@ -1,4 +1,4 @@
-<meta name="description" content="Pivotal education">
+<meta name="description" content="Andrew Khimich">
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
